# voice-speaker-id

./: .gitignore  config.py  flake.nix  lel  main.py  pyproject.toml
